@@ -1,5 +1,11 @@
 2006-05-10  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/mozilla/EphySidebar.cpp:
+
+	Another API change! Thank you, mozilla!
+
+2006-05-10  Christian Persch  <chpe@cvs.gnome.org>
+
 	* configure.ac:
 	* data/glade/prefs-dialog.glade:
 	* embed/ephy-favicon-cache.c: (ephy_favicon_cache_get):
